# xdm-silent-greeter

./: Makefile.am  README.md  configure.ac  gdb.sh  rebuild.sh  run.sh  xdm-Xresources  xdm-config  xdm-config-silent  xdm-silent-greeter  xdm.kdevelop  xdm.kdevelop.filelist  xdm.kdevelop.pcs  xdm.kdevses
debian/: NEWS  changelog  control  gbp.conf  rules  watch  xdm.README.Debian  xdm.config.in  xdm.dirs  xdm.init  xdm.install  xdm.logrotate  xdm.pam  xdm.postinst.in  xdm.postrm.in  xdm.preinst.in  xdm.prerm.in  xdm.templates
debian/local/: Xreset  Xsetup  Xstartup  xdm.options.5
debian/patches/: 00_warning_fixes.diff  01_xdm_include_fcntl.diff  02_xdm_zombie_no_error.diff  03_spelling.diff  04_xdm_init_log_earlier.diff  06_hurd_utsname.diff  07_xdm_more_debug.diff  08_xdm_execute_more_debug.diff  09_xdm_syserrormsg.diff  10_xdm_better_logging.diff  11_xdm_strerror.diff  12_remove_pidfile.diff  15_xdm_openfiles.diff  20_xdm_log_timestamp.diff  21_xdm_log_append.diff  90_xdm_write_dummy_auth.diff  91_xdm_saveserverauth_logging.diff  debian.diff  doc_mention_xdm.options.diff  log_sourcing_better.diff  openlog.diff  selinux_support.diff  series  storepid_rewrite.diff  support_logfile_rotation.diff  xdm_fixes.diff
debian/po/: POTFILES.in  ca.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fr.po  gl.po  it.po  ja.po  ko.po  ml.po  nl.po  pl.po  pothead.in  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  ta.po  templates.pot  tr.po  vi.po  zh_CN.po
greeter/: greet.c
greeter-silent/: Makefile.am  greet-silent.c
